# RayTracer

./: .gitignore  CMakeLists.txt  README.md  cells.yml  debug.sh  docker-compose.yml  exec.sh  test.sh
diagnostics/: geodesic.py
env/: Dockerfile  start.sh
examples/: cell_generator.py  cells.yml  cells_kerr.yml  simple.yml  test.yml  test_kerr.yml
lodepng/: CMakeLists.txt
models/: test.yml
src/: CMakeLists.txt  RGB_Image.cpp  RGB_Image.h  main.cpp
src/model/: BoundingBox.cpp  BoundingBox.h  Cube.cpp  Cube.h  Light.cpp  Light.h  Material.cpp  Material.h  Modeling.cpp  Modeling.h  Object.cpp  Object.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/model/bump/: BumpMapping.cpp  BumpMapping.h
src/render/: HitRecord.cpp  HitRecord.h  Ray.cpp  Ray.h  Tracer.cpp  Tracer.h
src/spacetime/: Spacetime.h  SpacetimeFlat.cpp  SpacetimeFlat.h  SpacetimeKerr.cpp  SpacetimeKerr.h
src/test/: Geodesic.cpp
src/util/: de.h
